--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -156,11 +156,11 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
   <h2>Key Features of Hyperacusis</h2>
   <ul>
     <li><strong>Reduced sound tolerance</strong>, <strong>tinnitus (often reactive)</strong>, and <strong>discomfort or pain</strong> in more advanced cases. When pain or discomfort is present, it is often accompanied by a sensation of <strong>aural fullness or pressure</strong>. </li>
-    <li>Noxacusis is an umbrella term that encompasses both loudness hyperacusis and neuropathic-related sound sensitivity.</li>
-    <li>True loudness hyperacusis is a distinct condition from neuropathic-related sound sensitivity</li>
+    <li>Noxacusis is a term that encompasses both loudness hyperacusis and neuropathic-related sound sensitivity.</li>
+    <li>True loudness hyperacusis is a distinct condition from neuropathic-related sound sensitivity.</li>
     <li>Can lead to social withdrawal and isolation to avoid sound exposure. Severe cases are usually completely homebound.</li>
     <a id="severity"></a> 
-    <li>Often triggered by acoustic trauma or prolonged noise exposure.</li>
+    <li>Often follows acoustic trauma or prolonged noise exposure.</li>
     <li>Sometimes associated with tonic tensor tympani syndrome (TTTS).</li>
   </ul> 
 
