--- a/medications.html
+++ b/medications.html
@@ -201,7 +201,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
       </p>
 
        <div class="page-break" aria-hidden="true"></div>
-      <h1>Sphenopalatine Ganglion Block  <i class="fas fa-link link-icon" data-anchor="spg" onclick="copyAnchorLink(this)"></i></h1>
+      <h1>Sphenopalatine Ganglion (SPG) Block  <i class="fas fa-link link-icon" data-anchor="spg" onclick="copyAnchorLink(this)"></i></h1>
 
     <p>
     A sphenopalatine ganglion (SPG) block is a minimally invasive procedure in which local anesthetia or steroids are delivered to the sphenopalatine ganglion (a parasympathetic nerve bundle located behind the nasal cavity) to interrupt pain signaling. The block may be performed using a soft transnasal applicator (cotton swab) saturated with anesthetic, a catheter-based delivery system (syringe attached to a thin catheter that is guided through the nasal cavity), or in some cases a needle introduced under endoscopic or fluoroscopic guidance. 
