--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
   </p>
 
       <p>
-      <a class="link" href="https://discord.gg/EmCKg3UN" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> ─ This is our official server and the easiest way to reach us.
+      <a class="link" href="https://discord.gg/wd4zWZ6fRf" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> ─ This is our official server and the easiest way to reach us.
       By joining our Discord server, you can communicate with us directly and have discussions with others who are living with hyperacusis. It’s a place to ask questions, share experiences, and get support from people who truly understand what you’re going through.
       </p>
       <p>
