--- a/imaging.html
+++ b/imaging.html
@@ -103,7 +103,7 @@
         </p>
 <a id="ct"></a>
       <div class="page-break" aria-hidden="true"></div>
-       <h1>High-Resolution Temporal Bone CT   <i class="fas fa-link link-icon" data-anchor="ct" onclick="copyAnchorLink(this)"></i></h1>
+       <h1>High-Resolution Temporal Bone CT</h1>
 <ul>
   <li>Performed for evaluation of hyperacusis, noxacusis, TTTS, MEM, and tinnitus.</li>
   <li>Ultra-thin slices (typically 0.5–0.6 mm) for high spatial resolution.</li>
