--- a/community.html
+++ b/community.html
@@ -138,6 +138,10 @@
       <div class="page-break" aria-hidden="true"></div>
       <h1>Other Sites</h1>
       <p>
+      <a class="link" href="https://hyperacusisresearch.org/" target="_blank" rel="noopener noreferrer">Hyperacusis Research</a> <br>
+      Hyperacusis Research Limited, Inc. is a 501(c)(3) non-profit organization dedicated to advancing biomedical research into the underlying mechanisms of hyperacusis, with the goal of developing effective treatments and ultimately finding a cure.
+      </p>
+      <p>
       <a class="link" href="https://hyperacusiscentral.org/" target="_blank" rel="noopener noreferrer">Hyperacusis Central</a> <br> A collection of personal stories from those affected by hyperacusis, including many accounts of severe and life-altering cases.  These stories provide an in-depth look into the lives of individuals severely affected by the condition, offering valuable insight into just how serious hyperacusis can become.
       </p>     
       <p>
