--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -277,11 +277,10 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
   <div class="ldl-test">
   <strong>LDL (Loudness Discomfort Level) Testing — Key Concerns</strong>
 <ul>
-  <li>The test is not standardized, not objective, and not accurate.</li>
+  <li>The test is not standardized, objective, or accurate.</li>
       <li>LDLs cannot be relied upon to represent a person’s ability to tolerate sound in daily life.</li>
   <li>LDLs and self-ratings of decreased sound tolerance are poorly correlated.</li>
-  <li>LDL testing can permanently worsen tinnitus and hyperacusis.</li>
-  <li>Many people report being worsened by this testing, which provides no meaningful clinical benefit.</li>
+  <li>LDL testing can permanently worsen tinnitus and hyperacusis symptoms and offers little to no meaningful clinical benefit.</li>
       <li>The test uses harsh, pure-tone beeps at various frequencies. These tones are directed into an already injured ear, eliciting the same discomfort the patient is seeking help for.</li>
   <li>Patients tested are often those least likely to be comfortable with LDL testing.</li>
   <li>Patients have the right to decline LDL testing or any test.</li>
