--- a/community.html
+++ b/community.html
@@ -153,7 +153,7 @@
       <div class="page-break" aria-hidden="true"></div>
       <h1>Discord</h1>
       <p>
-      <a class="link" href="https://discord.gg/3KNZ3rdnxe" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> <br> This is our official server and the easiest way to reach us. Our personal experience with hyperacusis, noxacusis, and tinnitus allows us to assist newly affected individuals in finding effective management strategies and treatments.
+      <a class="link" href="https://discord.gg/wd4zWZ6fRf" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> <br> This is our official server and the easiest way to reach us. Our personal experience with hyperacusis, noxacusis, and tinnitus allows us to assist newly affected individuals in finding effective management strategies and treatments.
       </P>
       <p>
       <a class="link" href="https://discord.gg/TwqVrAQq" target="_blank" rel="noopener noreferrer">Hyperacusis Support Discord Server</a> <br> A community of over 400 members who share their personal experiences, treatment outcomes, and insights. <i>Hyperacusis Guide highly recommends this server.</i>
