--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - About</title>
   <meta name="description" content="Trusted hyperacusis guidance based on real experience, helping you manage symptoms safely, avoid setbacks, and find reliable information.">
-
+  <meta property="og:image" content="512.png" />
   <script>
     (function() {
         const THEME_KEY = 'userTheme';
