--- a/community.html
+++ b/community.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - Community</title>
   <meta name="description" content="Communities and resources for hyperacusis, noxacusis, MEM, TTTS, and tinnitus, including support groups, educational sites, and trusted guidance.">
-
+  <meta property="og:image" content="512.png" />
   <script>
     (function() {
         const THEME_KEY = 'userTheme';
