--- a/imaging.html
+++ b/imaging.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - Diagnostic Imaging</title>
   <meta name="description" content="Learn why early high-resolution temporal bone CT is essential in hyperacusis evaluation, what it reveals, and when specialized ENT follow-up is needed.">
-
+  <meta property="og:image" content="512.png" />
   <script>
     (function() {
         const THEME_KEY = 'userTheme';
