--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <title>Hyperacusis Guide - Precautionary Guide</title>
   <meta name="description" content="A precautionary guide for new hyperacusis patients offering safe strategies to prevent worsening, support recovery, and navigate early treatment decisions.">
 
+  <meta property="og:image" content="512.png" />
 
   <script>
     (function() {
