--- a/medications.html
+++ b/medications.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - Medications</title>
   <meta name="description" content="Guide to medications and procedures for hyperacusis and noxacusis, including antidepressants, benzodiazepines, ambroxol, clomipramine, Botox, and SPG blocks.">
-
+  <meta property="og:image" content="512.png" />
   <script>
     (function() {
         const THEME_KEY = 'userTheme';
