--- a/patch.html
+++ b/patch.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - Paper Patching</title>
   <meta name="description" content="Tympanic membrane paper patching is a low-risk procedure that may reduce hyperacusis and noxacusis symptoms by dampening eardrum vibrations.">
-
+  <meta property="og:image" content="512.png" />
   <script>
     (function() {
         const THEME_KEY = 'userTheme';
