--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - Contact</title>
   <meta name="description" content="Have questions or need support? Contact Hyperacusis Guide on Discord or by email and connect with others living with hyperacusis.">
-  <meta property="og:image" content="512.png" />
+  <meta property="og:image" content="https://www.hyperacusisguide.org/512.png" />
   <script>
     (function() {
         const THEME_KEY = 'userTheme';
