--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - Hyperacusis</title>
   <meta name="description" content="Comprehensive guide to hyperacusis and noxacusis, including symptoms, subtypes, severity scale, differences from misophonia and phonophobia, and management insights.">
-  <meta property="og:image" content="512.png" />
+  <meta property="og:image" content="https://www.hyperacusisguide.org/512.png" />
   <script>
     (function() {
         const THEME_KEY = 'userTheme';
