--- a/mem.html
+++ b/mem.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - MEM & TTTS</title>
   <meta name="description" content="Learn about middle ear myoclonus (MEM) and tonic tensor tympani syndrome (TTTS), their symptoms, causes, support groups, and management options.">
-  <meta property="og:image" content="512.png" />
+  <meta property="og:image" content="https://www.hyperacusisguide.org/512.png" />
   <script>
     (function() {
         const THEME_KEY = 'userTheme';
