--- a/silverstein.html
+++ b/silverstein.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - Silverstein Procedure</title>
   <meta name="description" content="The Silverstein Procedure offers relief for severe hyperacusis, stabilizing middle ear structures to dampen sound and reduce discomfort.">
-  <meta property="og:image" content="512.png" />
+  <meta property="og:image" content="https://www.hyperacusisguide.org/512.png" />
   <script>
     (function() {
         const THEME_KEY = 'userTheme';
