--- a/tinnitus.html
+++ b/tinnitus.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide - Tinnitus</title>
   <meta name="description" content="Explore tinnitus causes, symptoms, and treatments, from sound therapy and CBT to experimental bimodal devices, with insights for hyperacusis patients.">
-  <meta property="og:image" content="512.png" />
+  <meta property="og:image" content="https://www.hyperacusisguide.org/512.png" />
 <script>
     (function() {
         const THEME_KEY = 'userTheme';
