--- a/silverstein.html
+++ b/silverstein.html
@@ -232,13 +232,22 @@ Locating a specialist qualified to perform the Silverstein Procedure can be chal
 
 </ul>
 
-        <ul>
-        <li class="white"><strong>Belgium:</strong></li>
-        <ul>
-            <li><a class="link" href="https://www.mariamiddelares.be/en/physicians/michael-boedts" target="_blank" rel="noopener noreferrer">Dr. Michael Boedts</a> <br> Ghent, BE <br> <span class ="green">Offers virtual appointment</span></li>
-        </ul>
-        </ul>
+        <ul class="main-list">
 
+  <li class="white"><strong>Belgium:</strong></li>
+
+
+    <div class="nested-columns">
+      <ul>
+        <li><a class="link" href="https://www.mariamiddelares.be/en/physicians/michael-boedts" target="_blank" rel="noopener noreferrer">Dr. Michael Boedts</a> <br> Ghent, BE <br> <span class ="green">Offers virtual appointment</span></li>
+      </ul>
+
+      <ul>
+        <li><a class="link" href="https://drthomassomers.be/en/home/" target="_blank" rel="noopener noreferrer">Dr. Thomas Somers MD, Ph.D.</a> <br> Antwerp, BE <br> <span class ="green">Offers virtual appointment</span></li>
+      </ul>
+    </div>
+
+</ul>
     </article>
 <a href="#top" class="back-to-top" aria-label="Back to top"></a>
   </main>
