--- a/imaging.html
+++ b/imaging.html
@@ -86,16 +86,20 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"></head>
 <body>
   <a id="top"></a> 
       <div id="copy-overlay">
   <div id="copy-message">Link copied</div>
 </div>
-  <header>
+   <header>
     <div class="h-width">
     <h1 class="logo">
-    <img class="logo-image" src="logo.png"><span class="guide-word"><span class="a">Hyperacusis</span> Guide</span></h1>
+    <span class="guide-word"><span class="a">hyperacusis</span><span class="g"> g</span><span class="u">u</span><span class="i">i</span><span class="d">d</span><span class="e">e</span></span></h1>
 <div class="dark-mode-align" id="dark-mode-toggle">
     <svg class="dark-icon-size" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
@@ -118,7 +122,6 @@
     <span></span>
     <span></span>
   </button>
-</div>
 </div>
   </header>
   <nav id="sidebar">
