--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -161,7 +161,7 @@
   <p class="lead">
     Hyperacusis often follows acoustic trauma or prolonged noise exposure and its severity can vary widely. 
     For many individuals, hyperacusis causes distress, anxiety, and social withdrawal as they attempt to avoid environments that provoke discomfort. 
-    Proper management focuses on <strong>protecting against harmful sound exposure</strong> while <i>very gradually</i> reintroducing tolerable sounds in a controlled, stable environment to help restore auditory tolerance.
+    Proper management should primari focus on <strong>protecting against harmful sound exposure</strong>. Once auditory tolerance shows signs of improvement, sounds can be <i>carefully and gradually</i> reintroduced in a controlled environment.
   </p>
 
     <p>
@@ -219,7 +219,7 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
 
   <p>
   Lastly, we believe it is extremely important for individuals who are newly affected by hyperacusis to <strong>avoid sound therapy and tinnitus retraining therapy (TRT)</strong>, at least until their symptoms have stabilized and they have a clear understanding of their tolerance thresholds. We recommend practicing sound isolation during the early stages of recovery until these limits are better understood.
-  The recovery process can take some time and should not be rushed. Individuals may need to make significant lifestyle adjustments and, in some cases, temporarily stop working to avoid worsening their symptoms.
+  The recovery process can take some time and should not be rushed. Individuals may need to make significant lifestyle adjustments and, in some cases, temporarily or permanently stop working to avoid worsening their symptoms.
   </p>
   <h2>Key Features of Hyperacusis</h2>
   <ul>
@@ -321,14 +321,8 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
     </p>
 
     <p>
-      The <a class="link" href="https://pmc.ncbi.nlm.nih.gov/articles/PMC8901946/" target="_blank" rel="noopener noreferrer">Loudness Discomfort Level (LDL)</a> test is often used to help
-      distinguish these conditions. During the test, tones or speech are played at gradually
-      increasing volumes until the individual indicates that the sound is uncomfortably loud.
-    </p>
-
-    <p>
-      People with hyperacusis typically have <strong>significantly lower LDLs</strong> (often 70–90 dB or
-      lower), reflecting reduced tolerance for sound intensity. <i>Note that individuals with severe hyperacusis may be unable to tolerate an LDL test due to the distress or pain caused by even mild sound exposure</i>.
+      
+      Although the <a class="link" href="https://pmc.ncbi.nlm.nih.gov/articles/PMC8901946/" target="_blank" rel="noopener noreferrer">Loudness Discomfort Level (LDL)</a> test is sometimes used to differentiate these conditions, <i>we do not recommend it for individuals with hyperacusis</i>. During the test, harsh pure-tone beeps are played at gradually increasing volumes until the individual indicates the sound is uncomfortably loud, which can dramatically worsen symptoms. Furthermore, the LDL test is unreliable and provides little to no clinical benefit.
     </p>
 
     <p>
@@ -348,6 +342,10 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
   </div>
   </div>
   </p>
+      <p>
+      Individuals with hyperacusis typically have <strong>significantly lower LDLs</strong> (often 70–90 dB or
+      lower), reflecting reduced tolerance for sound intensity.
+    </p>
 
     <p>
       Individuals with misophonia usually have normal LDLs, since their discomfort arises
