--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         const html = document.documentElement;
         
         // --- DEFINING PATHS as RELATIVE (as confirmed) ---
-        const DARK_LOGO_PATH = 'logo.png'; 
-        const LIGHT_LOGO_PATH = 'light-logo.png'; 
+        const DARK_LOGO_PATH = 'hg.png'; 
+        const LIGHT_LOGO_PATH = 'hg-light.png'; 
         
         let storedTheme = localStorage.getItem(THEME_KEY);
         let targetTheme = storedTheme;
@@ -103,7 +103,7 @@
   <header>
     <div class="h-width">
     <h1 class="logo">
-    <span class="guide-word"><span class="a">hyperacusis</span><span class="glow"><span class="g"> g</span><span class="u">u</span><span class="i">i</span><span class="d">d</span><span class="e">e</span></span></span></h1>
+    <img src="hg.png" class="logo-image"><span class="guide-word"><span class="a">hyperacusis</span><span class="glow"><span class="g"> g</span><span class="u">u</span><span class="i">i</span><span class="d">d</span><span class="e">e</span></span></span></h1>
 <div class="dark-mode-align" id="dark-mode-toggle">
     <svg class="dark-icon-size" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
