--- a/mem.html
+++ b/mem.html
@@ -33,14 +33,14 @@
   <title>Hyperacusis Guide - MEM & TTTS</title>
   <meta name="description" content="Learn about middle ear myoclonus (MEM) and tonic tensor tympani syndrome (TTTS), their symptoms, causes, support groups, and management options.">
   <meta property="og:image" content="https://www.hyperacusisguide.org/512.png" />
-  <script>
+    <script>
     (function() {
         const THEME_KEY = 'userTheme';
         const html = document.documentElement;
         
         // --- DEFINING PATHS as RELATIVE (as confirmed) ---
-        const DARK_LOGO_PATH = 'logo.png'; 
-        const LIGHT_LOGO_PATH = 'light-logo.png'; 
+        const DARK_LOGO_PATH = 'hg.png'; 
+        const LIGHT_LOGO_PATH = 'hg-light.png'; 
         
         let storedTheme = localStorage.getItem(THEME_KEY);
         let targetTheme = storedTheme;
@@ -74,6 +74,7 @@
 
   <link rel="stylesheet" href="styles.css">
 
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -90,16 +91,17 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"></head>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
 <body>
-  <a id="top"></a> 
     <div id="copy-overlay">
   <div id="copy-message">Link copied</div>
 </div>
-   <header>
+  <a id="top"></a> 
+  <header>
     <div class="h-width">
     <h1 class="logo">
-    <span class="guide-word"><span class="a">hyperacusis</span><span class="glow"><span class="g"> g</span><span class="u">u</span><span class="i">i</span><span class="d">d</span><span class="e">e</span></span></span></h1>
+    <img src="hg.png" class="logo-image"><span class="guide-word"><span class="a">hyperacusis</span><span class="glow"><span class="g"> g</span><span class="u">u</span><span class="i">i</span><span class="d">d</span><span class="e">e</span></span></span></h1>
 <div class="dark-mode-align" id="dark-mode-toggle">
     <svg class="dark-icon-size" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
