--- a/community.html
+++ b/community.html
@@ -166,7 +166,12 @@
 
       
       <div class="page-break" aria-hidden="true"></div>
-      <h1>Facebook</h1
+      <h1>Facebook</h1>
+
+      <p>
+      <a class="link" href="https://www.facebook.com/hyperacusisresearch" target="_blank" rel="noopener noreferrer">Hyperacusis Research</a> <br>
+      Hyperacusis Research Limited, Inc. is a 501(c)(3) non-profit organization dedicated to advancing biomedical research into the underlying mechanisms of hyperacusis. Their Facebook page shares regular updates on research and related developments.
+      </p>
 
       <p>
       <a class="link" href="https://www.facebook.com/groups/2271375819742791/" target="_blank" rel="noopener noreferrer">Hyperacusis Surgery Talk</a>  <br>
