--- a/community.html
+++ b/community.html
@@ -172,7 +172,10 @@
       <a class="link" href="https://www.facebook.com/hyperacusisresearch" target="_blank" rel="noopener noreferrer">Hyperacusis Research</a> <br>
       Hyperacusis Research Limited, Inc. is a 501(c)(3) non-profit organization dedicated to advancing biomedical research into the underlying mechanisms of hyperacusis. Their Facebook page shares regular updates on research and related developments.
       </p>
-
+      <p>
+      <a class="link" href="https://www.facebook.com/groups/NHTSUPPORT/" target="_blank" rel="noopener noreferrer">Hyperacusis Support</a> <br>
+      A community of over 3000 members who share their personal experiences, treatment outcomes, and insights. This page is affiliated with the Hyperacusis Support Discord server and serves as an extension of the community for sharing updates, support, and information.
+      </p>
       <p>
       <a class="link" href="https://www.facebook.com/groups/2271375819742791/" target="_blank" rel="noopener noreferrer">Hyperacusis Surgery Talk</a>  <br>
       A community of over 1,300 members dedicated to the surgical management of hyperacusis, with a primary focus on the Silverstein procedure.
