--- a/community.html
+++ b/community.html
@@ -5,27 +5,27 @@
 <!-- ===========================
      FAVICONS (PNG)
      =========================== -->
-<link rel="icon" type="image/png" sizes="16x16" href="icon/16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="icon/32.png">
-<link rel="icon" type="image/png" sizes="48x48" href="icon/48.png">
-<link rel="icon" type="image/png" sizes="64x64" href="icon/64.png">
-<link rel="icon" type="image/png" sizes="128x128" href="icon/128.png">
-<link rel="icon" type="image/png" sizes="256x256" href="icon/256.png">
-<link rel="icon" type="image/png" sizes="512x512" href="icon/512.png">
+<link rel="icon" type="image/png" sizes="16x16" href="16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="32.png">
+<link rel="icon" type="image/png" sizes="48x48" href="48.png">
+<link rel="icon" type="image/png" sizes="64x64" href="64.png">
+<link rel="icon" type="image/png" sizes="128x128" href="128.png">
+<link rel="icon" type="image/png" sizes="256x256" href="256.png">
+<link rel="icon" type="image/png" sizes="512x512" href="512.png">
 
 <!-- ===========================
      iOS / APPLE TOUCH ICONS
      =========================== -->
-<link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon-180x180.png">
-<link rel="apple-touch-icon" href="/icon/apple-touch-icon.png"> <!-- Default fallback -->
+<link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
+<link rel="apple-touch-icon" href="apple-touch-icon.png"> <!-- Default fallback -->
 
 <!-- ===========================
      WEB APP MANIFEST
      =========================== -->
-<link rel="manifest" href="/icon/site.webmanifest">
+<link rel="manifest" href="site.webmanifest">
 
 
   <meta charset="UTF-8">
