--- a/community.html
+++ b/community.html
@@ -190,7 +190,7 @@
       </p>
       <p>
       <a class="link" href="https://www.facebook.com/groups/2271375819742791/" target="_blank" rel="noopener noreferrer">Hyperacusis Surgery Talk</a>  <br>
-      A community of over 1,300 members dedicated to the surgical management of hyperacusis, with a primary focus on the Silverstein procedure.
+      A community of over 1,300 members dedicated to the surgical management of hyperacusis, with a primary focus on the Silverstein Procedure.
       </p>
 
       <p>
