--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@
       We can also be reached by email at <a class="link" href="mailto:hyperacusishelp@gmail.com">hyperacusishelp@gmail.com</a>
       </p>
       <p>
-      <iframe src="https://discord.com/widget?id=1440497381283201178&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+      <iframe src="https://discord.com/widget?id=1440497381283201178&theme=dark" width="350" height="500" style="border-radius: 0.6rem; overflow: hidden; border: none; margin-top: 8px;" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
       </p>
   </article>
 <a href="#top" class="back-to-top" aria-label="Back to top"></a>
