--- a/medications.html
+++ b/medications.html
@@ -226,7 +226,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
   </p>
   <a id="botox"></a>
   <p>
-  <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Please refer to the spreadsheet</a> which provides numerous patient reports on clomipramine use, including information on dosage, effectiveness, and side effects. <i>**The findings in the spreadsheet should be interpreted with caution because the data does not reflect direct user input and is relayed through several individuals responsible for maintaining the spreadsheet, potentially biasing the results in favor of clomipramine.**</i>
+  <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Please refer to the spreadsheet</a> which provides numerous patient reports on clomipramine use, including information on dosage, effectiveness, and side effects. <i>**In regard to clomipramine, the findings in the spreadsheet should be interpreted with caution because the data does not reflect direct user input and is relayed through several individuals responsible for maintaining the spreadsheet, potentially biasing the results in favor of clomipramine.**</i>
   </p>
       <div class="page-break" aria-hidden="true"></div>
       <h1>Botox  <i class="fas fa-link link-icon" data-anchor="botox" onclick="copyAnchorLink(this)"></i></h1>
