--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <li>Minimize leaving home except for essential medical visits. <i>This precaution may be temporary but is important in the early phase to prevent irreversible setbacks.</i></li>
 
         <li>Arrange errands, deliveries, and communication so you can maintain a low-noise environment.</li>
-        <li>This will likely require you to stop working, at least temporarily, but it’s far better to take a planned break now than to risk worsening your condition and being forced to stop working due to an irreversible setback.</li>
+        <li>In many cases this will likely require you to request disability work accommodations, work from home, or take a medical leave from work, at least temporarily, but it’s far better to take a planned break now than to risk worsening your condition and being forced to stop working due to an irreversible setback.</li>
       </ul>
 
       <h2>5. Diagnostic Imaging</h2>
