--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -217,7 +217,7 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
   loudness intolerance, aural fullness, or worsening overall 
   condition from sound. Based on our observations, these 
   patients may respond better to medications such as 
-  <a class="link" href="medications.html#clomipramine" target="_blank" rel="noopener noreferrer">clomipramine</a> than those with true loudness hyperacusis.
+  <a class="link" href="medications.html#clomipramine" target="_blank" rel="noopener noreferrer">clomipramine</a> than those with primary loudness hyperacusis.
   </li>
 
   <p><i>Note: There may be some overlap between these two subtypes of noxacusis, and it is possible for an individual to display symptoms from both groups simultaneously, but most people still tend to fall primarily into one group.</i></p>
@@ -235,7 +235,7 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
   <ul>
     <li><strong>Reduced sound tolerance</strong>, <strong>tinnitus (often reactive)</strong>, and <strong>discomfort or pain</strong> in more advanced cases. When pain or discomfort is present, it is often accompanied by a sensation of <strong>aural fullness or pressure</strong>. </li>
     <li>Noxacusis is a term that encompasses both loudness hyperacusis and neuropathic-related sound sensitivity.</li>
-    <li>True loudness hyperacusis is a distinct condition from neuropathic-related sound sensitivity.</li>
+    <li>Primary loudness hyperacusis is a distinct condition from neuropathic-related sound sensitivity.</li>
     <li>Can lead to social withdrawal and isolation to avoid sound exposure. Severe cases are usually completely homebound.</li>
     <a id="severity"></a> 
     <li>Often follows acoustic trauma or prolonged noise exposure.</li>
