--- a/medications.html
+++ b/medications.html
@@ -189,7 +189,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
 
   <ul>
     <li><strong>Benzodiazepines (clonazepam, diazepam):</strong> May temporarily reduce sound sensitivity, muscle spasms, and anxiety but carry an extremely high risk of dependence and withdrawal. <i><uL>Withdrawal from benzodiazepines can be extremely difficult, often requiring a gradual taper over many months. In some cases, individuals experience protracted withdrawals that may persist for years, underscoring the need for great caution when using or discontinuing these medications.</ul></i></li>
-    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> Appear to provide greater symptom relief for individuals with sound sensitivity related to neuropathic pain (neuralgia) than for those with true loudness hyperacusis.</li>
+    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> Appear to provide greater symptom relief for individuals with sound sensitivity related to neuropathic pain (neuralgia) than for those with primary loudness hyperacusis.</li>
     <li><strong>SNRIs (duloxetine):</strong> Explored for central pain modulation, variable effectiveness.</li>
     <a id="clomipramine"></a>
     <li><strong>Anticonvulsants (gabapentin, pregabalin):</strong> May help neuropathic auditory pain, variable effectiveness.</li>
@@ -208,7 +208,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
   <ul>
       <li><strong>Hyperacusis symptoms are mild or absent:</strong> Patients are able to carry out normal daily activities, can usually continue working a quiet job, and can tolerate normal environmental sounds without fear of a permanent setback, though some require the use of hearing protection. Aural fullness is generally mild or absent in these individuals.<i><ul>Based on our knowledge, no patients who are truly severe and homebound have reported meaningful improvement in their symptoms after taking clomipramine.</ul></i></li>
       <li><strong>No permanent setbacks:</strong> Patients may have a temporary setback from exposing to sound above their tolerance threshold, but return to their previous baseline after a period of rest.</li>
-    <li><strong>Neuropathic pain (neuralgia):</strong> Almost all of these patients complain of pain that would be most consistent with neuralgia, frequently a burning sensation that radiates from around the ear into the face and head. True loudness hyperacusis patients usually complain of more focused pain that localizes to the middle ear (deep to the tympanic membrane).</li>
+    <li><strong>Neuropathic pain (neuralgia):</strong> Almost all of these patients complain of pain that would be most consistent with neuralgia, frequently a burning sensation that radiates from around the ear into the face and head. Primary loudness hyperacusis patients usually complain of more focused pain that localizes to the middle ear (deep to the tympanic membrane).</li>
 
   </ul>
   <p>
